# LG-ultrafine-brightness

./: Brightness.cpp  Brightness.h  CMakeLists.txt  README.md  UltrafineDisplay.cpp  UltrafineDisplay.h  main.cpp
cmake/: Findlibusb-1.0.cmake
